static/css/custom.css
.info-col .img-holder img {
    height: 275px !important;
}

#sidebar {
    margin-top: 90px !important;
}

.btn .changeIT {
    height: 51px !important;
    margin-left: 20px !important;
    width:160px !important;
}

@media only screen and (max-width: 767px) {
    #sidebar {
        display: none !important;
    }
        body {

            overflow-x: hidden !important;
}
    html {
            overflow-x: hidden !important;

    }
    .alert-success{
        width: 200px;
        margin-left: 57px;
    }
    }


.fa .fa-home {
    font-size: 15px;
    margin-right: 15px;

}

.logo img {
    height:300px !important;
}

.date-holder {
    float: left !important;
}

.logo {
    margin-top: -50px !important;
    margin-bottom: 20px !important;
}

.posts-blog img {
    width: 100% !important;
}

.navbar-default .navbar-nav{
    font-size: 14px !important;
}

.follow-instagram .logo-holder {
    padding-bottom: 5px !important;
}

